--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -56,3 +56,27 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
 
+    # ----------------------------------------------------
+    # 5. SCA – Dependency Vulnerability Scan
+    # ----------------------------------------------------
+    - name: OWASP Dependency Check
+      uses: dependency-check/Dependency-Check_Action@main
+      with:
+        project: "maven-app"
+        path: "."
+        format: "HTML"
+      continue-on-error: true
+
+    # ----------------------------------------------------
+    # 6. Unit Testing
+    # ----------------------------------------------------
+    - name: Run Unit Tests
+      run: mvn test
+
+    # ----------------------------------------------------
+    # 7. Build Application
+    # ----------------------------------------------------
+    - name: Build with Maven
+      run: mvn clean package -DskipTests
+
+
