Use secret for DockerHub username in workflow

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -131,6 +131,6 @@ jobs:
     # ----------------------------------------------------
     - name: Push Image to DockerHub
       run: |
-        docker push vilasvarghese/test:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/test:latest
 
 
